syntax = "proto3";

package broker.knita.io;

option go_package = "github.com/knita-io/knita/api/broker/v1";

import "executor/v1/executor.proto";

service RuntimeBroker {
  rpc Tender(TenderRequest) returns (TenderResponse);
  rpc Settle(SettlementRequest) returns (SettlementResponse);
}

message TenderRequest {
  string build_id = 1;
  string tender_id = 2;
  executor.knita.io.Opts opts = 3;
}

message RuntimeContract {
  string tender_id = 1;
  string contract_id = 2;
  string runtime_id = 3;
  executor.knita.io.Opts opts = 4;
  executor.knita.io.SystemInfo sys_info = 5;
  executor.knita.io.ExecutorInfo executor_info = 6;
}

message TenderResponse {
  repeated RuntimeContract contracts = 1;
}

message SettlementRequest {
    RuntimeContract contract = 1;
}

message SettlementResponse {
  RuntimeConnectionInfo connection_info = 1;
}

message RuntimeConnectionInfo {
  oneof transport {
    RuntimeTransportUnix unix = 1;
    RuntimeTransportTCP tcp = 2;
  }
}

message RuntimeTransportUnix {
  string socket_path = 1;
}

message RuntimeTransportTCP {
  string address = 1;
}